Final change to compiler before submission
1. removed a lot of comments
2. changed input.argon file
3. reformatted code
4. marked some parts of the code as deprecated

Also included in this change are the neatoutput.txt and output.argonobj